--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
         <button onclick="buy('GsmStores');" id="gsmStoresButton" disabled>Buy GSM store</button>
     </div>
 
+    <div id="shoeShopDiv">
+        <p id="shoeShopsDescription">Shoe shops give you 325 $ per second. They cost 25000 $. You currently have 0 shoes shops. This item must be unlocked.</p>            
+
+        <button onclick="buy('ShoeShops');" id="shoeShopsButton" disabled>Buy shoe shop</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
