--- a/index.html
+++ b/index.html
@@ -92,6 +92,38 @@
         <button onclick="buy('ShoeShops');" id="shoeShopsButton" disabled>Buy shoe shop</button>
     </div>
 
+    <hr>
+
+    <div id="loanDiv">
+        <p>Loans give you temporary money that you must repay after a certain time with a 10 % tax on top.</p>
+        <form>
+            <label for="quantity">Quantities: </label><br>
+            <input type="radio" value="1000" name="quantity">1 000 $<br>
+            <input type="radio" value="2000" name="quantity">2 000 $<br>
+            <input type="radio" value="5000" name="quantity">5 000 $<br>
+            <input type="radio" value="10000" name="quantity">10 000 $<br>
+            <input type="radio" value="20000" name="quantity">20 000 $<br>
+            <input type="radio" value="50000" name="quantity">50 000 $<br>
+            <input type="radio" value="100000" name="quantity">100 000 $<br>
+            <input type="radio" value="200000" name="quantity">200 000 $<br>
+            <input type="radio" value="500000" name="quantity">500 000 $<br>
+            <input type="radio" value="1000000" name="quantity">1 000 000 $<br>
+            <input type="radio" value="2000000" name="quantity">2 000 000 $<br>
+            <input type="radio" value="5000000" name="quantity">5 000 000 $<br>
+            <input type="radio" value="10000000" name="quantity">10 000 000 $<br>
+            <input type="radio" value="20000000" name="quantity">20 000 000 $<br>
+            <input type="radio" value="50000000" name="quantity">50 000 000 $<br>
+            <input type="radio" value="100000000" name="quantity">100 000 000 $<br>
+
+            <label for="time">Times: </label><br>
+            <input type="radio" value="60" name="time">1 minute<br>
+            <input type="radio" value="120" name="time">2 minutes<br>
+            <input type="radio" value="300" name="time">5 minutes<br>
+
+        </form>
+        <button onclick="takeLoan();">Get loan</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
