Added rebirth mechanic

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
         <button onclick="takeLoan();">Get loan</button>
     </div>
 
+    <hr>
+
+    <div id="rebirthDiv">
+        <p id="rebirthDescription">Rebirths take all your money upgrades and shops but they increase your money gain by 25 % than before. They cost 500000 $.</p>
+        
+        <button onclick="rebirth();">Rebirth</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
