Added nav and small style changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker Game V2</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./ico/favicon-16x16.png">
     <link rel="manifest" href="./ico/site.webmanifest">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="header">
@@ -31,7 +31,19 @@
     <hr>
 
     <div id="navigation">
-        lol
+        <nav>
+            <a href="#moneyStats">Money</a>
+            <a href="#workerDiv">Workers</a>
+            <a href="#clickUpgradeDiv">Click Upgrades</a>
+            <a href="#souvenirShopDiv">Souvenir Shops</a>
+            <a href="#bookStoreDiv">Book Stores</a>
+            <a href="#clothesShopDiv">Clothes Shops</a>
+            <a href="#gsmStoreDiv">Gsm Stores</a>
+            <a href="#shoeShopDiv">Shoe Shops</a>
+            <a href="#loanDiv">Loans</a>
+            <a href="#depositDiv">Deposits</a>
+            <a href="#rebirthDiv">Rebirths</a>
+        </nav>
     </div>
 
     <hr>
