Added automatic navigation.

--- a/index.html
+++ b/index.html
@@ -30,16 +30,8 @@
 
     <hr>
 
-    <div id="navigation">
-        <nav>
-            <a href="#moneyStats">Money</a>
-            <a href="#workerDiv">Workers</a>
-            <a href="#clickUpgradeDiv">Click Upgrades</a>
-            <a href="#souvenirShopDiv">Souvenir Shops</a>
-            <a href="#bookStoreDiv">Book Stores</a>
-            <a href="#clothesShopDiv">Clothes Shops</a>
-            <a href="#gsmStoreDiv">Gsm Stores</a>
-            <a href="#shoeShopDiv">Shoe Shops</a>
+    <div id="navigationDiv">
+        <nav id="navigation">
             <a href="#loanDiv">Loans</a>
             <a href="#depositDiv">Deposits</a>
             <a href="#rebirthDiv">Rebirths</a>
