changed server stuff added model for profile (not finished) and changed GSM to Phone

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <button onclick="buy('ClothesShops');" id="clothesShopsButton" disabled>Buy clothes shop</button>
     </div>
 
-    <div id="gsmStoreDiv">
-        <p id="gsmStoresDescription">GSM stores give you 250 $ per second. They cost 20000 $. You currently have 0 GSM stores. This item must be unlocked.</p>
+    <div id="phoneStoreDiv">
+        <p id="phoneStoresDescription">Phone stores give you 250 $ per second. They cost 20000 $. You currently have 0 phone stores. This item must be unlocked.</p>
         
-        <button onclick="buy('GsmStores');" id="gsmStoresButton" disabled>Buy GSM store</button>
+        <button onclick="buy('PhoneStores');" id="phoneStoresButton" disabled>Buy Phone store</button>
     </div>
 
     <div id="shoeShopDiv">
